--- a/configs/s2ef/all/equiformer_v2/equiformer_v2_N@20_L@6_M@3_153M.yml
+++ b/configs/s2ef/all/equiformer_v2/equiformer_v2_N@20_L@6_M@3_153M.yml
@@ -54,8 +54,8 @@ model:
   weight_init:              'uniform'    # ['uniform', 'normal']
 
 optim:
-  batch_size:                   3         # 6
-  eval_batch_size:              3         # 6
+  batch_size:                   3
+  eval_batch_size:              1
   load_balancing: atoms
   num_workers: 8
   lr_initial:                   0.0004    # [0.0002, 0.0004], eSCN uses 0.0008 for batch size 96
@@ -68,7 +68,7 @@ optim:
     lambda_type: cosine
     warmup_factor: 0.2
     warmup_epochs: 0.01
-    lr_min_factor: 0.01         #
+    lr_min_factor: 0.01
 
   max_epochs: 1
   clip_grad_norm: 100
