--- a/configs/s2ef/all/baseline/baseline.yml
+++ b/configs/s2ef/all/baseline/baseline.yml
@@ -46,13 +46,14 @@ model:
 
 optim:
   # paper config
-  batch_size: 50
-  eval_batch_size: 50
+  batch_size: 5
+  eval_batch_size: 5
 
   # bigger
   # batch_size: 10
   # eval_batch_size: 10
 
+  load_balancing: atoms
   num_workers: 8
   lr_initial: 0.0002
   lr_gamma: 0.3
