--- a/configs/s2ef/all/schnet/schnet.yml
+++ b/configs/s2ef/all/schnet/schnet.yml
@@ -11,6 +11,7 @@ loss_functions:
 
 model:
   name: schnet
+  otf_graph: true
   hidden_channels: 1024
   num_filters: 256
   num_interactions: 5
@@ -27,7 +28,7 @@ optim:
   batch_size: 20
   eval_batch_size: 20
   eval_every: 10000
-  num_workers: 16
+  num_workers: 15
   lr_initial: 0.0001
   lr_gamma: 0.1
   lr_milestones: # steps at which lr_initial <- lr_initial * lr_gamma
